@@ -38,6 +38,8 @@ ND_DHCP4 = '[Match]\nName=%s\n\n[Network]\nDHCP=ipv4\n\n[DHCP]\nUseMTU=true\nRou
 ND_WIFI_DHCP4 = '[Match]\nName=%s\n\n[Network]\nDHCP=ipv4\n\n[DHCP]\nUseMTU=true\nRouteMetric=600\n'
 ND_DHCP6 = '[Match]\nName=%s\n\n[Network]\nDHCP=ipv6\n\n[DHCP]\nUseMTU=true\nRouteMetric=100\n'
 ND_DHCPYES = '[Match]\nName=%s\n\n[Network]\nDHCP=yes\n\n[DHCP]\nUseMTU=true\nRouteMetric=100\n'
+UDEV_MAC_RULE = 'SUBSYSTEM=="net", ACTION=="add", DRIVERS=="%s", ATTR{address}=="%s", NAME="%s"\n'
+UDEV_NO_MAC_RULE = 'SUBSYSTEM=="net", ACTION=="add", DRIVERS=="%s", NAME="%s"\n'
 
 
 class TestBase(unittest.TestCase):
@@ -88,6 +90,20 @@ class TestBase(unittest.TestCase):
                          {'10-netplan-' + f for f in file_contents_map})
         for fname, contents in file_contents_map.items():
             with open(os.path.join(networkd_dir, '10-netplan-' + fname)) as f:
+                self.assertEqual(f.read(), contents)
+
+    def assert_networkd_udev(self, file_contents_map):
+        udev_dir = os.path.join(self.workdir.name, 'run', 'udev', 'rules.d')
+        if not file_contents_map:
+            # it can either not exist, or can only contain 90-netplan.rules
+            self.assertTrue((not os.path.exists(udev_dir)) or
+                            (os.listdir(udev_dir) == ['90-netplan.rules']))
+            return
+
+        self.assertEqual(set(os.listdir(udev_dir)) - set(['90-netplan.rules']),
+                         {'99-netplan-' + f for f in file_contents_map})
+        for fname, contents in file_contents_map.items():
+            with open(os.path.join(udev_dir, '99-netplan-' + fname)) as f:
                 self.assertEqual(f.read(), contents)
 
     def assert_nm(self, connections_map=None, conf=None):
@@ -296,6 +312,7 @@ DHCP=ipv6
 UseMTU=true
 RouteMetric=100
 '''})
+        self.assert_networkd_udev(None)
 
     def test_eth_wol(self):
         self.generate('''network:
@@ -306,6 +323,7 @@ RouteMetric=100
       dhcp4: n''')
 
         self.assert_networkd({'eth0.link': '[Match]\nOriginalName=eth0\n\n[Link]\nWakeOnLan=magic\n'})
+        self.assert_networkd_udev(None)
         self.assert_nm(None, '''[keyfile]
 # devices managed by networkd
 unmanaged-devices+=interface-name:eth0,''')
@@ -322,6 +340,7 @@ unmanaged-devices+=interface-name:eth0,''')
       dhcp4: n''')
 
         self.assert_networkd({'eth1.link': '[Match]\nOriginalName=eth1\n\n[Link]\nWakeOnLan=off\nMTUBytes=1280\n'})
+        self.assert_networkd_udev(None)
 
     def test_mtu_all(self):
         self.generate(textwrap.dedent("""
@@ -347,6 +366,7 @@ unmanaged-devices+=interface-name:eth0,''')
             'eth1.link': '[Match]\nOriginalName=eth1\n\n[Link]\nWakeOnLan=off\nMTUBytes=1280\n',
             'eth1.network': '[Match]\nName=eth1\n\n[Network]\nBond=bond0\nLinkLocalAddressing=no\n'
         })
+        self.assert_networkd_udev(None)
 
     def test_eth_match_by_driver_rename(self):
         self.generate('''network:
@@ -358,6 +378,7 @@ unmanaged-devices+=interface-name:eth0,''')
       set-name: lom1''')
 
         self.assert_networkd({'def1.link': '[Match]\nDriver=ixgbe\n\n[Link]\nName=lom1\nWakeOnLan=off\n'})
+        self.assert_networkd_udev({'def1.rules': (UDEV_NO_MAC_RULE % ('ixgbe', 'lom1'))})
         # NM cannot match by driver, so blacklisting needs to happen via udev
         self.assert_nm(None, None)
         self.assert_nm_udev('ACTION=="add|change", SUBSYSTEM=="net", ENV{ID_NET_DRIVER}=="ixgbe", ENV{NM_UNMANAGED}="1"\n')
@@ -372,6 +393,7 @@ unmanaged-devices+=interface-name:eth0,''')
       set-name: lom1''')
 
         self.assert_networkd({'def1.link': '[Match]\nMACAddress=11:22:33:44:55:66\n\n[Link]\nName=lom1\nWakeOnLan=off\n'})
+        self.assert_networkd_udev({'def1.rules': (UDEV_MAC_RULE % ('?*', '11:22:33:44:55:66', 'lom1'))})
         self.assert_nm(None, '''[keyfile]
 # devices managed by networkd
 unmanaged-devices+=mac:11:22:33:44:55:66,''')
@@ -385,6 +407,7 @@ unmanaged-devices+=mac:11:22:33:44:55:66,''')
       dhcp4: y''')
 
         self.assert_networkd({'engreen.network': ND_DHCP4 % 'engreen'})
+        self.assert_networkd_udev(None)
 
     def test_eth_match_dhcp4(self):
         self.generate('''network:
@@ -405,6 +428,7 @@ DHCP=ipv4
 UseMTU=true
 RouteMetric=100
 '''})
+        self.assert_networkd_udev(None)
         self.assert_nm_udev('ACTION=="add|change", SUBSYSTEM=="net", ENV{ID_NET_DRIVER}=="ixgbe", ENV{NM_UNMANAGED}="1"\n')
 
     def test_eth_match_name(self):
@@ -417,6 +441,7 @@ RouteMetric=100
       dhcp4: true''')
 
         self.assert_networkd({'def1.network': ND_DHCP4 % 'green'})
+        self.assert_networkd_udev(None)
         self.assert_nm(None, '''[keyfile]
 # devices managed by networkd
 unmanaged-devices+=interface-name:green,''')
@@ -435,6 +460,7 @@ unmanaged-devices+=interface-name:green,''')
         self.assert_networkd({'def1.network': ND_DHCP4 % 'green',
                               'def1.link': '[Match]\nOriginalName=green\n\n[Link]\nWakeOnLan=off\nMACAddress=00:01:02:03:04:05\n'
                               })
+        self.assert_networkd_udev(None)
 
     def test_eth_match_name_rename(self):
         self.generate('''network:
@@ -449,6 +475,10 @@ unmanaged-devices+=interface-name:green,''')
         # the .network needs to match on the renamed name
         self.assert_networkd({'def1.link': '[Match]\nOriginalName=green\n\n[Link]\nName=blue\nWakeOnLan=off\n',
                               'def1.network': ND_DHCP4 % 'blue'})
+
+        # The udev rules engine does support renaming by name
+        self.assert_networkd_udev(None)
+
         self.assert_nm(None, '''[keyfile]
 # devices managed by networkd
 unmanaged-devices+=interface-name:blue,''')
@@ -462,6 +492,7 @@ unmanaged-devices+=interface-name:blue,''')
       dhcp4: true''')
 
         self.assert_networkd({'def1.network': ND_DHCP4 % '*'})
+        self.assert_networkd_udev(None)
         self.assert_nm(None, '''[keyfile]
 # devices managed by networkd
 unmanaged-devices+=interface-name:*,''')
@@ -477,6 +508,7 @@ unmanaged-devices+=interface-name:*,''')
 
         self.assert_networkd({'def1.network': '[Match]\n\n[Network]\nDHCP=ipv4\n\n'
                                               '[DHCP]\nUseMTU=true\nRouteMetric=100\n'})
+        self.assert_networkd_udev(None)
         self.assert_nm(None, '''[keyfile]
 # devices managed by networkd
 unmanaged-devices+=type:ethernet,''')
@@ -561,6 +593,7 @@ unmanaged-devices+=interface-name:eth0,''')
       dhcp4: true''')
 
         self.assert_networkd({'eth0.network': ND_DHCP4 % 'eth0'})
+        self.assert_networkd_udev(None)
         self.assert_nm(None, '''[keyfile]
 # devices managed by networkd
 unmanaged-devices+=interface-name:eth0,''')
@@ -1608,6 +1641,7 @@ method=ignore
       set-name: lom1''')
 
         self.assert_networkd({'def1.link': '[Match]\nDriver=ixgbe\n\n[Link]\nName=lom1\nWakeOnLan=off\n'})
+        self.assert_networkd_udev({'def1.rules': (UDEV_NO_MAC_RULE % ('ixgbe', 'lom1'))})
         self.assert_nm({'def1': '''[connection]
 id=netplan-def1
 type=ethernet
@@ -1635,6 +1669,7 @@ method=ignore
       set-name: lom1''')
 
         self.assert_networkd({'def1.link': '[Match]\nMACAddress=11:22:33:44:55:66\n\n[Link]\nName=lom1\nWakeOnLan=off\n'})
+        self.assert_networkd_udev({'def1.rules': (UDEV_MAC_RULE % ('?*', '11:22:33:44:55:66', 'lom1'))})
         self.assert_nm({'def1': '''[connection]
 id=netplan-def1
 type=ethernet
@@ -1740,6 +1775,9 @@ method=ignore
         name: green
       set-name: blue
       dhcp4: true''')
+
+        # The udev rules engine does support renaming by name
+        self.assert_networkd_udev(None)
 
         # NM needs to match on the renamed name
         self.assert_nm({'def1': '''[connection]
